got some chat interface done, but will probably need a redo to ensure everything works as intended with spacing

--- a/core/src/app.css
+++ b/core/src/app.css
@@ -9,3 +9,7 @@
 @import './forma-theme.css'
 
 @source '../node_modules/@skeletonlabs/skeleton-svelte/dist';
+
+.preset-gradient-one {
+    background-image: linear-gradient(45deg, var(--color-secondary-600), var(--color-tertiary-500));
+}
